--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,17 +3,21 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
+unbind r
+bind r source-file ~/.tmux.conf
+
 setw -g mode-keys vi
 
 set -g mouse on
-set-option -g default-terminal "xterm-256color"
+set-option -g default-terminal "tmux-256color"
 set-option -g default-shell $SHELL
 set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -sa terminal-features ',xterm-256color:RGB'
 
-bind [ switch-client -n
-bind ] switch-client -p
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor "mocha"
+set -g @catppuccin_window_status_style "rounded"
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
@@ -22,3 +26,4 @@ set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.tmux/plugins/tpm/tpm'
+run ~/.tmux/plugins/catppuccin/tmux/catppuccin.tmux
