--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,9 @@ bind-key C-a send-prefix
 unbind r
 bind r source-file ~/.tmux.conf
 
+unbind N
+bind N new-session
+
 setw -g mode-keys vi
 
 set -g mouse on
@@ -14,6 +17,8 @@ set-option -g default-shell $SHELL
 set-option -sg escape-time 10
 set-option -g focus-events on
 set-option -sa terminal-features ',xterm-256color:RGB'
+
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
 
 # Configure the catppuccin plugin
 set -g @catppuccin_flavor "mocha"
