--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,23 +11,26 @@ bind N new-session
 
 setw -g mode-keys vi
 
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
+
 set -g mouse on
-set-option -g default-terminal "tmux-256color"
 set-option -g default-shell $SHELL
 set-option -sg escape-time 10
 set-option -g focus-events on
-set-option -sa terminal-features ',xterm-256color:RGB'
 
-bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
+set -g default-terminal "tmux-256color"
+set -ga terminal-overrides ",*256col*:Tc"
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+set-environment -g COLORTERM "truecolor"
 
 # Configure the catppuccin plugin
-set -g @catppuccin_flavor "mocha"
+set -g @plugin 'catppuccin/tmux'
+set -g @catppuccin_flavor "latte"
 set -g @catppuccin_window_status_style "rounded"
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.tmux/plugins/tpm/tpm'
