fix: flottir litir í tmux stikunni

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,8 +25,10 @@ set-environment -g COLORTERM "truecolor"
 
 # Configure the catppuccin plugin
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavor "latte"
+set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
+
+set -agF status-right "#{E:@catppuccin_status_battery}"
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
