--- a/.tmux.conf
+++ b/.tmux.conf
@@ -25,7 +25,7 @@ set-environment -g COLORTERM "truecolor"
 
 # Configure the catppuccin plugin
 set -g @plugin 'catppuccin/tmux'
-set -g @catppuccin_flavor "latte"
+set -g @catppuccin_flavor "frappe"
 set -g @catppuccin_window_status_style "rounded"
 
 # list of plugins
