--- a/.tmux.conf
+++ b/.tmux.conf
@@ -28,7 +28,7 @@ set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 
-set -agF status-right "#{E:@catppuccin_status_battery}"
+# set -agF status-right "#{E:@catppuccin_status_battery}"
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
