--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,11 @@ bind r source-file ~/.tmux.conf
 unbind N
 bind N new-session
 
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
+bind P paste-buffer
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
+
 setw -g mode-keys vi
 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
