--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,7 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
 setw -g mode-keys vi
 
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
+bind-key -r h run-shell "tmux neww ~/.local/bin/tmux-launcher.sh"
 
 set -g mouse on
 set-option -g default-shell $SHELL
