--- a/.tmux.conf
+++ b/.tmux.conf
@@ -9,6 +9,8 @@ bind r source-file ~/.tmux.conf
 unbind N
 bind N new-session
 
+bind t if-shell '[ "$(tmux display-message -p "#{pane_at_right}")" = 1 ]' 'select-pane -R' 'if-shell "[ \"$(tmux display-message -p "#{pane_at_left}")\" = 1 ]" "resize-pane -Z" ""'
+
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 bind P paste-buffer
@@ -16,8 +18,12 @@ bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
 
 setw -g mode-keys vi
 
+unbind ";"
+bind-key -r æ run-shell "~/.local/bin/tmux_resize_or_select_pane.sh"
+bind-key -r ";" run-shell "~/.local/bin/tmux_resize_or_select_pane.sh"
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
 bind-key -r h run-shell "tmux neww ~/.local/bin/tmux-launcher.sh"
+bind-key C-a last-window
 
 set -g mouse on
 set-option -g default-shell $SHELL
@@ -29,12 +35,10 @@ set -ga terminal-overrides ",*256col*:Tc"
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 set-environment -g COLORTERM "truecolor"
 
-# Configure the catppuccin plugin
+
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
-
-# set -agF status-right "#{E:@catppuccin_status_battery}"
 
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
