--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,12 +17,12 @@ bind P paste-buffer
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel
 
 setw -g mode-keys vi
-
+bind-key p previous-window
 unbind ";"
 bind-key -r æ run-shell "~/.local/bin/tmux_resize_or_select_pane.sh"
 bind-key -r ";" run-shell "~/.local/bin/tmux_resize_or_select_pane.sh"
 bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
-bind-key -r h run-shell "tmux neww ~/.local/bin/tmux-launcher.sh"
+bind-key -r F run-shell "tmux neww ~/.local/bin/tmux-launcher.sh"
 bind-key C-a last-window
 
 set -g mouse on
@@ -35,6 +35,8 @@ set -ga terminal-overrides ",*256col*:Tc"
 set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
 set-environment -g COLORTERM "truecolor"
 
+set-option -g base-index 1
+set-window-option -g pane-base-index 1
 
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "mocha"
