--- a/sway/.sway/config
+++ b/sway/.sway/config
@@ -38,10 +38,10 @@ output * bg ~/pictures/wallpaper/win95.jpg fill
 #
 # Example configuration:
 #
-# exec swayidle -w \
-#          timeout 300 'swaylock -f -c 000000' \
-#          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-#          before-sleep 'swaylock -f -c 000000'
+exec swayidle -w \
+  timeout 300 'swaylock -f -c 000000' \
+  timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
+  before-sleep 'swaylock -f -c 000000'
 #
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
@@ -212,23 +212,6 @@ bindsym $mod+r mode "resize"
     # Special key to take a screenshot with grim
     bindsym Print exec grim
 
-#
-# Status Bar:
-#
-# Read `man 5 sway-bar` for more information about this section.
-bar {
-    position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    status_command while date +'%Y-%m-%d %X'; do sleep 1; done
-
-    colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
-    }
-}
 
 # Touchpad settings
 input "type:touchpad" {
@@ -243,8 +226,13 @@ input "type:keyboard" {
   xkb_options ctrl:nocaps,grp:win_space_toggle
 }
 
+# Status bar
 bar {
-  status_command i3status
+    swaybar_command waybar
+    #status_command i3status
+    #position top
+    #mode dock
+    #font pango:monospace 10
 }
 
 include @sysconfdir@/sway/config.d/*
