--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,4 +1,3 @@
-# remap prefix from c-b to c-a
 unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
@@ -10,6 +9,8 @@ unbind N
 bind N new-session
 
 bind t if-shell '[ "$(tmux display-message -p "#{pane_at_right}")" = 1 ]' 'select-pane -R' 'if-shell "[ \"$(tmux display-message -p "#{pane_at_left}")\" = 1 ]" "resize-pane -Z" ""'
+
+set-option -g set-clipboard on
 
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
