feat: ctrl+ð for copy mode

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -12,6 +12,8 @@ bind t if-shell '[ "$(tmux display-message -p "#{pane_at_right}")" = 1 ]' 'selec
 
 set-option -g set-clipboard on
 
+bind-key ð copy-mode
+
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
 bind P paste-buffer
