--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -41,6 +41,14 @@ set-environment -g COLORTERM "truecolor"
 set-option -g base-index 1
 set-window-option -g pane-base-index 1
 
+#is_vim="ps -o state= -o comm= -t '#{pane_tty}' | grep -iqE '^[^TXZ ]+ +(n?vim|nvim-.*)$'"
+is_vim="tmux display -p '#{pane_current_command}' | grep -iqE 'n?vim'"
+
+bind -n C-h if-shell "$is_vim" "send-keys C-h" "select-pane -L"
+bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
+bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
+bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
+
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
