--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,9 +1,9 @@
-general.import = [ "~/.config/alacritty/catppuccin-mocha.toml" ]
+import = [ "~/.config/alacritty/catppuccin-mocha.toml" ]
 
 [env]
 TERM = "xterm-256color"
 
-[terminal.shell]
+[shell]
 program = "/home/oskar/.local/bin/tmux-launcher.sh"
 
 [font]
@@ -12,4 +12,4 @@ bold = { family = "UbuntuMono Nerd Font", style = "Bold" }
 italic = { family = "UbuntuMono Nerd Font", style = "Italic" }
 size = 12.0
 
-[terminal]
+
