--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,9 +1,9 @@
-import = [ "~/.config/alacritty/catppuccin-mocha.toml" ]
+general.import = [ "~/.config/alacritty/catppuccin-mocha.toml" ]
 
 [env]
 TERM = "xterm-256color"
 
-[shell]
+[terminal.shell]
 program = "/home/oskar/.local/bin/tmux-launcher.sh"
 
 [font]
@@ -11,5 +11,7 @@ normal = { family = "UbuntuMono Nerd Font", style = "Regular" }
 bold = { family = "UbuntuMono Nerd Font", style = "Bold" }
 italic = { family = "UbuntuMono Nerd Font", style = "Italic" }
 size = 12.0
+
+[terminal]
 
 
