--- a/alacritty/.config/alacritty/alacritty.toml
+++ b/alacritty/.config/alacritty/alacritty.toml
@@ -1,4 +1,5 @@
-general.import = [ "~/.config/alacritty/catppuccin-mocha.toml" ]
+[general]
+import = [ "~/.config/alacritty/catppuccin-mocha.toml" ]
 
 [env]
 TERM = "xterm-256color"
