--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -13,6 +13,8 @@ bind t if-shell '[ "$(tmux display-message -p "#{pane_at_right}")" = 1 ]' 'selec
 set-option -g set-clipboard on
 
 bind-key ð copy-mode
+bind-key þ copy-mode \; send-keys /
+bind-key Þ copy-mode \; send-keys ?
 
 bind -T copy-mode-vi v send -X begin-selection
 bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "wl-copy"
@@ -60,3 +62,4 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 
 run '~/.tmux/plugins/tpm/tpm'
 run ~/.tmux/plugins/tmux/catppuccin.tmux
+
