feat: combine tmux launcher and sessionizer

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,7 +26,7 @@ bind-key p previous-window
 unbind ";"
 bind-key -r æ run-shell "~/.local/bin/tmux_resize_or_select_pane.sh"
 bind-key -r ";" run-shell "~/.local/bin/tmux_resize_or_select_pane.sh"
-bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-sessionizer.sh"
+bind-key -r f run-shell "tmux neww ~/.local/bin/tmux-launcher.sh"
 bind-key -r F run-shell "tmux neww ~/.local/bin/tmux-launcher.sh"
 bind-key C-a last-window
 
