feat: harpoon shortcuts, also added to install_software.sh

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -51,6 +51,13 @@ bind -n C-j if-shell "$is_vim" "send-keys C-j" "select-pane -D"
 bind -n C-k if-shell "$is_vim" "send-keys C-k" "select-pane -U"
 bind -n C-l if-shell "$is_vim" "send-keys C-l" "select-pane -R"
 
+bind . run 'harpoon -A'
+bind e run 'harpoon -e'
+bind -n M-1 run 'harpoon -s 1'
+bind -n M-2 run 'harpoon -s 2'
+bind -n M-3 run 'harpoon -s 3'
+bind -n M-4 run 'harpoon -s 4'
+
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
