feat (tmux): more harpoon shortcuts

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -57,6 +57,11 @@ bind -n M-1 run 'harpoon -s 1'
 bind -n M-2 run 'harpoon -s 2'
 bind -n M-3 run 'harpoon -s 3'
 bind -n M-4 run 'harpoon -s 4'
+bind -n M-5 run 'harpoon -s 5'
+bind -n M-6 run 'harpoon -s 6'
+bind -n M-7 run 'harpoon -s 7'
+bind -n M-8 run 'harpoon -s 8'
+bind -n M-9 run 'harpoon -s 9'
 
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "mocha"
