feat (tmux): more visible session name

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -63,6 +63,9 @@ bind -n M-7 run 'harpoon -s 7'
 bind -n M-8 run 'harpoon -s 8'
 bind -n M-9 run 'harpoon -s 9'
 
+set-option -g status-left-length 40 
+set-option -g status-left '#[fg=yellow,bold][[#[default]#[default]#S#[default]#[fg=yellow,bold]]]#[default] '
+
 set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
@@ -71,6 +74,7 @@ set -g @catppuccin_window_status_style "rounded"
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
+
 
 run '~/.tmux/plugins/tpm/tpm'
 run ~/.tmux/plugins/tmux/catppuccin.tmux
