--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -70,6 +70,12 @@ set -g @plugin 'catppuccin/tmux'
 set -g @catppuccin_flavor "mocha"
 set -g @catppuccin_window_status_style "rounded"
 
+#set -g @plugin "janoamaral/tokyo-night-tmux"
+#set -g @tokyo-night-tmux_theme storm
+#set -g @tokyo-night-tmux_window_id_style digital
+#set -g @tokyo-night-tmux_pane_id_style hsquare
+#set -g @tokyo-night-tmux_zoom_id_style dsquare
+
 # list of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
